# AWS_Deepracer_with_Optitrack

./: PathExtractionRos2.py  README.md
Custom/: customRWfun1.py  customRWfun2.py  customRWfun3.py  customRWfun4.py  customRWfunfin.py
deeracerRewardFuns/: README.md  follow_center_line.py  prevent_zigzag.py  stay_inside_borders.py  stay_on_one_lane_and_not_crash.py
vrpn_client_ros/: README.md
vrpn_client_ros/config/: sample.params.yaml
vrpn_client_ros/launch/: sample.launch.py  vrpn_launch.launch.py
vrpn_client_ros/src/: vrpn_client_node.cpp  vrpn_client_ros.cpp  vrpn_tracker_node.cpp
vrpn_path_ext/: CMakeLists.txt  package.xml
vrpn_path_ext/config/: sample.params.yaml
vrpn_path_ext/include/vrpn_path_ext/: vrpn_client_ros.h
vrpn_path_ext/launch/: path_launch.py  vrpn_launch.launch.py
vrpn_path_ext/scripts/: pathExtRos2.py  pathExtRos_new.py
vrpn_path_ext/src/: vrpn_client_node.cpp  vrpn_client_ros.cpp  vrpn_tracker_node.cpp
vrpn_path_ext/vrpn_path_ext/: __init__.py  module_to_import.py
vrpn_status_pub/: CMakeLists.txt  README.md  package.xml
vrpn_status_pub/config/: sample.params.yaml
vrpn_status_pub/include/vrpn_status_pub/: vrpn_client_ros.h
vrpn_status_pub/launch/: sample.launch.py  status.launch.py
vrpn_status_pub/scripts/: status_pub.py
vrpn_status_pub/src/: vrpn_client_node.cpp  vrpn_client_ros.cpp  vrpn_tracker_node.cpp
vrpn_status_pub/vrpn_status_pub/: module_to_import.py
